--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^20.10.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.21.1",
     "redux": "^4.1.0"
   },
   "devDependencies": {
